# init-watcher

./: .gitignore  README.md  pyproject.toml
src/initwatcher/: Directory.py  __main__.py  dircheck.py  utils.py
test/: test_directory.py  test_utils.py
